# NdkSample

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gengqiquan/ndksample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  Md5.cpp  compress-lib.cpp  crypt.cpp  md5.h  native-lib.cpp
app/src/main/cpp/native/jni/: OpenCVConfig.cmake
app/src/main/cpp/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules.cmake
app/src/main/cpp/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake
app/src/main/cpp/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules.cmake
app/src/main/cpp/native/jni/include/opencv2/dnn/: dnn.hpp
app/src/main/cpp/opencv2/: cvconfig.h
app/src/main/java/com/common/crypt/: Crypt.java
app/src/main/java/com/gengqiquan/ndksample/: Compress.java  ImageActivity.java  MD5.java  MainActivity.java
app/src/main/res/layout/: activity_image.xml
app/src/test/java/com/gengqiquan/ndksample/: ExampleUnitTest.java
